<?xml version="1.0"?>
<package format="2">
  <name>publish_imu</name>
  <version>0.0.0</version>
  <description>The publish_imu package</description>
  <maintainer email="cat@todo.todo">cat</maintainer>
  <license>TODO</license>

  <!-- 添加必要的依赖 -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>serial</build_depend>  <!-- 添加serial库依赖 -->
  
  <build_export_depend>roscpp</build_export_depend>

  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>serial</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
